Minor fix avoid header to overlap setting icon

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -74,6 +74,10 @@
       margin: 0;
       text-shadow: 0 1px 0 #fff;
       z-index: 1000002;
+      padding-right: 65px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     .octotree_help {
@@ -89,7 +93,6 @@
     }
     .octotree_header_repo, .octotree_header_branch {
       width: 100%;
-      padding-right: 55px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
